arc_bluetooth_bridge: Increase Android power intent timeout

Android takes 3-4 seconds to fulfill power state change, so the timeout
of 5 seconds is too close that the probability of the timeout hit is
high enough to happen to users. As a result, users often encounter
Bluetooth turned off by itself. This CL changes the timeout to 8 seconds
to provide safer buffer, if there is no response from Android after 8
seconds it is considered as lost (will never respond).

Future larger work is needed to avoid relying on timeout to make it more
robust, but at this moment we need a low-risk solution to be merged to
stable channel.

BUG=843650

Change-Id: I9aded127e3eb510ff58b1167900bda9546226aa5
Reviewed-on: https://chromium-review.googlesource.com/1062773
Reviewed-by: Miao-chen Chou <mcchou@chromium.org>
Reviewed-by: Luis Hector Chavez <lhchavez@chromium.org>
Commit-Queue: Sonny Sasaka <sonnysasaka@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559315}
Former-commit-id: d680078aa1a35778a523c23f2ea9a6d5243ac9cb